--- a/helpers.styl
+++ b/helpers.styl
@@ -21,3 +21,7 @@ a.link:before
   text-align right
 .text-uppercase
   text-transform: uppercase
+.clearfix:after
+  content: ''
+  display: table
+  clear: both
